--- a/style.css
+++ b/style.css
@@ -1,1 +1,8 @@
 /* Your code here! */
+.eula-container {
+  background-color: lightgrey;
+
+  height: 20em;
+  overflow-y: scroll;
+  border: 1px solid;
+}
